--- a/career.html
+++ b/career.html
@@ -113,7 +113,7 @@
                 <p><b>Wegmans Food Markets</b>- Cashier</p>
                 <p><b>Apr 2023 - Present</b></p>
                 <p class="indent">Processed transactions averaging around 32 customers per hour during peak times while maintaining high [99%+] accuracy with cash transactions. Provided effective solutions to customer needs and inquiries while keeping an eye on the task at hand.
-                    Through this role, I've learned to be a more effective communicator, how to work better as a team, how to better provide help to customers, and how to 
+                    Through this role, I've learned to be a more effective communicator, how to work better as a team, and how to better provide help to customers.
                 </p>
                 <p class="indent">I've also been assigned to other roles like cart to curb, bagging, bakery, and the cart crew. I've been exposed to many different work environments and I've learned to adapt faster overtime.</p>
                 <h2>Volunteering</h2>
@@ -133,8 +133,8 @@
                 <div class="list1">
                     <ul>
                       <li><a href="https://mail.google.com/mail/?view=cm&fs=1&to=nigelprice3000@gmail.com" target="_blank">nigelprice3000@gmail.com</a></li>
-                      <li><a href="#">All Media on this Website captured/created By Nigel Price (Me)</a></li>
-                      <li><a href="#">Website Coded by Nigel Price (Me) Using Html,Css,Javascript, and MongoDB. Hit Crtl+U!</a></li>
+                      <li><a href="#">All media on this site captured/created by Nigel Price (Me)</a></li>
+                      <li><a href="#">Website coded by Nigel Price using Html,Css,Javascript, and MongoDB.</a></li>
                     </ul>
                 </div>
                 <div class="list2">
@@ -149,4 +149,5 @@
         </div>
         <script src="script.js"></script>
     </body>
+
 </html>
