--- a/career.html
+++ b/career.html
@@ -66,7 +66,7 @@
 
                 <div class="header3">
                    <img class="pfp" src="RealLinkedInV6circle.png"> 
-                   <h1>Hello There</h1>
+                   <h1 style="font-size:50px;">Hello There</h1>
                 </div>
 
                 <div class="initial"></div>
@@ -122,7 +122,6 @@
                 <p><b>Wegmans Food Markets</b></p>
                 <h2>Projects</h2>
                 <a href="order.html">Engineering Projects</a><br>
-                <br>
                 <a href="playlist.html">Other Projects</a>
             </div>
         </div>
@@ -151,3 +150,4 @@
     </body>
 
 </html>
+
